Add local LLM provider

--- a/code/.env.template
+++ b/code/.env.template
@@ -61,3 +61,6 @@ NLWEB_LOGGING_PROFILE=production
 
 # Hugging Face Inference Providers env variables
 HF_TOKEN="<TODO>"
+
+# Local LLM model directory
+LOCAL_LLM_MODEL_PATH="<PATH_TO_LOCAL_MODEL>"
